# cover-vault

./: .gitignore  README.md  cover-vault-gui.spec  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
packaging/linux/: build.sh  cover-vault.desktop
packaging/macos/: build.sh
packaging/windows/: build.ps1  cover-vault.iss
requirements/: release.txt
src/cover_vault/: __init__.py  archive.py  arxiv.py  cli.py  cover.py  crypto.py  errors.py  gui.py  gui_logic.py  io_utils.py  progress.py  stego.py  vault.py
tests/: test_cover_vault.py  test_remote_and_arxiv.py
