[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cover-vault"
version = "2.2.0"
description = "Password-protected folder vaults stored in carrier files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0.0",
  "Pillow>=10.0.0",
  "pypdf>=5.9.0"
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.8.0"
]
test = [
  "pytest>=8.0.0"
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "pip-audit>=2.9.0"
]
[project.scripts]
cover-vault = "cover_vault.cli:main"
cover-vault-gui = "cover_vault.gui:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
